# structured_light_tomography

./: .gitignore  Manifest.toml  Project.toml  README.md  basis.jl  dataset_generation.jl  generate_training_dataset.ipynb  photocunt_treatment.ipynb  pyproject.toml  requirements.txt  samplers.jl  test.jl  training.ipynb  training_intense.ipynb  training_photocount.ipynb  translation.jl  utils.jl
Data/: center_and_waist_generator.jl  center_and_waist_generator_photocount.jl  data_treatment_utils.jl  dataset_generation.jl  fixed_order_intense_generator.jl  fixed_order_intense_treatment.jl  fixed_order_photocount_generator.jl  intense_fixed_order_treatment.jl  intense_generator.jl  photocount_generator.jl  photocount_treatment copy.jl  photocount_treatment.jl  positive_l_treatment.jl  representations.jl  samplers.jl  template.h5  test.jl
Experiment/: CondaPkg.toml  Manifest.toml  Project.toml  blade.jl  calibration.jl  check_corectness.jl  config.ini  display_mode.jl  iris.jl  many_dims.jl  positive_l.jl  test.ipynb  test.jl  test_capture.jl  test_slm.jl  ximea.jl
ExperimentPython/: capture_utils.py  fit.ipynb  test.ipynb  test_iris.ipynb
Experiment_OLD/: data.h5  device.xml  display_mode.jl  iris.jl  positive_l.jl  test_capture.jl
MLTomography/: data_loading.py  evaluation.py  evaluation_intense.py  evaluation_torch.py  fixed_order_intense_evaluation.py  fixed_order_intense_training.py  fixed_order_photocount_evaluation.py  fixed_order_photocount_training.py  loss.py  models.py  models_new.py  pyproject.toml  test.ipynb  training.py  training_intense.py  training_keras.py
MLTomography/Test/: checkpoint.pt  events.out.tfevents.1725137622.pop-os.9598.0  events.out.tfevents.1725137644.pop-os.9698.0  events.out.tfevents.1725137720.pop-os.9834.0  events.out.tfevents.1725137880.pop-os.10403.0
MLTomography/TrainedModels/: best_model.keras  checkpoint.pt  events.out.tfevents.1725995310.pop-os.48947.0
MLTomographyKeras/: center_and_waist_evaluation.ipynb  center_and_waist_training.py  fixed_order_intense_evaluation.ipynb  fixed_order_intense_training.py  fixed_order_photocount_evaluation.py  fixed_order_photocount_training.py  models.py  pyproject.toml  test.ipynb
Misc/: benchmark.jl  blade_progression_image.jl  cond.jl  download.jl  fit_results.jl  flow_iris.jl  iris_progression_image.jl  mixed_states.jl  parameter_comparison.jl  parameter_comparison_pc.jl  parameter_comparison_postive_l.jl  photocount_animation.jl  photocount_evolution_image.jl  rank.jl  test.jl  test_hurwitz.jl  test_is_positive.jl  test_real_representation.jl  transformation_experimental_points.jl  understanding_pseudoinv.jl  visualization_model.ipynb
New/: .gitignore  utils.jl
PositionMeasurements.jl/: Manifest.toml  Project.toml
Results/: blade.h5  fixed_order_intense.h5  fixed_order_photocount.h5  iris.h5  plot_intense.jl  plot_photocount.jl  positive_l.h5  tables.jl
Tomography/: bayes.jl  blade.jl  fisher.jl  fisher_corrected.jl  fisher_integral.jl  fisher_new.jl  fit_iris.jl  fixed_order_intense.jl  fixed_order_intense_with_ml.jl  fixed_order_photocount.jl  fixed_order_photocount_with_ml.jl  iris.jl  iris_new.jl  iris_simulation.jl  linear_inversion.jl  linear_inversion2.jl  positive_l.jl  positive_l_new.jl  positive_l_with_ml.jl  retrival.jl  simulation.jl  study_fit.jl  test.jl  test2.jl  test_fisher.jl  training.jl  transformation.jl
Tomography/MachineLearning/: dataset_generation.py  evaluation.py  evaluation_intense.py  evaluation_photocount.py  model_search.py  models.py  pyproject.toml  test_different_models.py  training.py  training_intense.ipynb  training_intense.py  training_photocount.ipynb  training_photocount.py
Tomography/MachineLearningNew/: main.py  models.py  pyproject.toml  training.py
Tomography/MachineLearningNew/src/machinelearning/: __init__.py
Utils/: basis.jl  bootstraping.jl  capture.jl  crop_vector_beam.jl  fisher.jl  hdf5_utils.jl  incomplete_measurements.jl  loops.jl  metrics.jl  ml_utils.jl  model_fitting.jl  obstructed_measurements.jl  obstructions.jl  photocount_treatment.jl  photocount_utils.jl  position_operators.jl  position_operators_new.jl  test.jl  (+1 more)
(+128 files in other folders)
