[project]
name = "mltomography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.11.0",
    "keras>=3.5.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.0",
    "torch>=2",
    "torchvision>=0.18.1",
    "jax[cuda12]>=0.4.28",
    "tensorboard>=2.17.1",
]
