[project]
name = "mltomography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.11.0",
    "juliacall>=0.9.23",
    "juliapkg>=0.1.13",
    "ipykernel>=6.29.5",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "keras>=3.5.0",
    "jax[cuda12]>=0.4.31",
]
