[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["Marcos Gil <marcosgildeoliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tensorboard = "^2.16.2"
torch-tb-profiler = "^0.4.3"
torch = "^2.2.1"
h5py = "^3.10.0"
ipykernel = "^6.29.3"
torchvision = "^0.17.1"
matplotlib = "^3.8.3"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
