[project]
name = "machinelearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.5.0",
    "jax[cuda12]>=0.4.31",
    "numpy>=2.1.0",
    "scipy>=1.14.1",
    "h5py>=3.11.0",
    "keras-cv>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
