[project]
name = "machinelearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3",
    "jax[cuda12]>=0.4",
    "numpy>=1.26",
    "scipy>=1.14.1",
    "h5py>=3.11.0",
    "keras-cv>=0.9.0",
    "tensorflow[and-cuda]>=2.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
